# HeaderTech

./: .clang-format  .clang-tidy  .deepsource.toml  .editorconfig  .gitignore  .gitmodules  .licrc  .restyled.yaml  CMakeLists.txt  CPPLINT.CFG  CPPLINT.cfg  Doxyfile  LICENSE  README.md  sonar-project.properties  view.h
app/editor/: CMakeLists.txt
app/editor/src/: main.cpp
app/sandbox/: CMakeLists.txt
app/sandbox/inc/: Sandbox.h
app/sandbox/src/: main.cpp
app/template_app/: CMakeLists.txt
app/template_app/src/: main.cpp
lib/: CMakeLists.txt  Doxyfile  Sample.cpp
lib/Common/: CMakeLists.txt
lib/Common/src/: Clock.cpp
lib/Common/test/: CMakeLists.txt  CheckVersion.cpp
lib/Config/: CMakeLists.txt
lib/Config/src/: Config.cpp
lib/Core/: CMakeLists.txt
lib/Event/: CMakeLists.txt
lib/Event/src/: Event.cpp  EventHandler.cpp  EventProcessor.cpp
lib/FileSystem/: CMakeLists.txt
lib/FileSystem/src/: FileSystem.cpp
lib/Logging/: CMakeLists.txt
lib/Logging/src/: LogFileHelper.cpp  Logging.cpp
lib/Runtime/: CMakeLists.txt
lib/Runtime/src/: Application.cpp  Runtime.cpp
lib/Sample/: CMakeLists.txt
lib/Sample/src/: Sample.cpp
lib/config/: CMakeLists.txt  version.txt
lib/config/inc/: Config.h  ConfigIncludes.h  RuntimeConfig.h
lib/config/src/: Config.cpp  ConfigIncludes.cpp
lib/core/: CMakeLists.txt
lib/core/inc/: Core.h  CoreIncludes.h  Engine.h  ReactiveProperty.h  Runtime.h  Runtime.inl  Window.h  Window.inl  WindowTypes.h
lib/core/src/: CoreIncludes.cpp  Engine.cpp
lib/docs/docbook/: _base_render_context_api_8h.xml  _base_render_context_api_8h__dep__incl.md5  _base_render_context_api_8h__incl.md5  _char_event_8h.xml  _char_mods_event_8h.xml  _char_mods_event_8h__dep__incl.md5  _char_mods_event_8h__incl.md5  _component_8h.xml  _component_8h__incl.md5  _config_includes_8cpp.xml  _config_includes_8h.xml  _config_includes_8h__incl.md5  _core_includes_8cpp.xml  _core_includes_8cpp__incl.md5  _core_includes_8h.xml  _cursor_enter_event_8h.xml  _cursor_enter_event_8h__dep__incl.md5  _cursor_enter_event_8h__incl.md5  _cursor_position_event_8h.xml  _cursor_position_event_8h__dep__incl.md5  _cursor_position_event_8h__incl.md5  _e_c_s_includes_8cpp.xml  _e_c_s_includes_8h.xml  _entity_8h.xml  _entity_8inl.xml  _entity_builder_8h.xml  _entity_builder_8h__incl.md5  _entity_builder_8inl.xml  _entity_builder_8inl__incl.md5  _entity_collection_8h.xml  _entity_collection_8h__dep__incl.md5  _entity_collection_8inl.xml  _entity_collection_8inl__incl.md5  _entity_component_view_8h.xml  _entity_component_view_8h__dep__incl.md5  _entity_component_view_8h__incl.md5  _entity_component_view_8inl.xml  _entity_component_view_8inl__incl.md5  _entity_set_8h.xml  _entity_set_8h__incl.md5  (+441 more)
lib/docs/html/: _base_render_context_api_8h.html  _base_render_context_api_8h__dep__incl.map  _base_render_context_api_8h__incl.map  _base_render_context_api_8h_source.html  _char_event_8h.html  _char_event_8h__dep__incl.map  _char_event_8h__dep__incl.md5  _char_event_8h__incl.map  _char_event_8h__incl.md5  _char_event_8h_source.html  _char_mods_event_8h.html  _char_mods_event_8h__dep__incl.map  _char_mods_event_8h__incl.map  _char_mods_event_8h_source.html  _component_8h.html  _component_8h.js  _component_8h__dep__incl.map  _component_8h__dep__incl.md5  _component_8h__incl.map  _component_8h_source.html  _config_includes_8cpp.html  _config_includes_8cpp.js  _config_includes_8cpp__incl.map  _config_includes_8cpp__incl.md5  _config_includes_8cpp_source.html  _config_includes_8h.html  _config_includes_8h__dep__incl.map  _config_includes_8h__dep__incl.md5  _config_includes_8h__incl.map  _config_includes_8h_source.html  _core_includes_8cpp.html  _core_includes_8cpp.js  _core_includes_8cpp__incl.map  _core_includes_8cpp_source.html  _core_includes_8h.html  _core_includes_8h__dep__incl.map  _core_includes_8h__dep__incl.md5  _core_includes_8h__incl.map  _core_includes_8h__incl.md5  _core_includes_8h_source.html  (+1481 more)
lib/docs/latex/: _base_render_context_api_8h.tex  _base_render_context_api_8h__dep__incl.md5  _base_render_context_api_8h__incl.md5  _char_event_8h.tex  _char_event_8h__dep__incl.md5  _char_event_8h__incl.md5  _char_mods_event_8h.tex  _char_mods_event_8h__dep__incl.md5  _char_mods_event_8h__incl.md5  _component_8h.tex  _component_8h__dep__incl.md5  _component_8h__incl.md5  _config_includes_8cpp.tex  _config_includes_8cpp__incl.md5  _config_includes_8h.tex  _config_includes_8h__dep__incl.md5  _config_includes_8h__incl.md5  _core_includes_8cpp.tex  _core_includes_8cpp__incl.md5  _core_includes_8h.tex  _core_includes_8h__dep__incl.md5  _core_includes_8h__incl.md5  _cursor_enter_event_8h.tex  _cursor_enter_event_8h__dep__incl.md5  _cursor_enter_event_8h__incl.md5  _cursor_position_event_8h.tex  _cursor_position_event_8h__dep__incl.md5  _cursor_position_event_8h__incl.md5  _e_c_s_includes_8cpp.tex  _e_c_s_includes_8cpp__incl.md5  _e_c_s_includes_8h.tex  _e_c_s_includes_8h__dep__incl.md5  _e_c_s_includes_8h__incl.md5  _entity_8h.tex  _entity_8h__dep__incl.md5  _entity_8h__incl.md5  _entity_8inl.tex  _entity_8inl__incl.md5  _entity_builder_8h.tex  _entity_builder_8h__dep__incl.md5  (+584 more)
lib/ecs/: CMakeLists.txt
lib/ecs/inc/: Component.h  ECSIncludes.h  Entity.h  Entity.inl  EntityBuilder.h  EntityBuilder.inl  EntityCollection.h  EntityCollection.inl  EntityComponentSystem.h  EntityComponentView.h  EntityComponentView.inl  EntitySet.h  EntitySet.inl
lib/ecs/src/: ECSIncludes.cpp  EntityComponentSystem.cpp
lib/events/: CMakeLists.txt
lib/events/inc/: Event.h  Event.inl  EventDispatcher.h  EventDispatcher.inl  EventSubscription.h  EventSubscription.inl  Events.h  EventsIncludes.h
lib/events/src/: Event.cpp  EventsIncludes.cpp
lib/filesystem/: CMakeLists.txt
lib/filesystem/inc/: FileSystem.h  FileSystemIncludes.h
lib/logging/: CMakeLists.txt
lib/profiler/: CMakeLists.txt
lib/render/: CMakeLists.txt
lib/render/inc/: Render.h  (+5 more)
lib/runtime/: CMakeLists.txt
lib/scene/: CMakeLists.txt
lib/template_library/: CMakeLists.txt
lib/ui/: CMakeLists.txt
lib/window/: CMakeLists.txt
(+393 files in other folders)
